kubernetes/admin-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: admin-test-pod
  namespace: prod
spec:
  serviceAccountName: admin-sa
  containers:
  - name: curl
    image: curlimages/curl
    command: ["/bin/sleep", "3600"]
