kubernetes/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: w-sidecar
  namespace: monitoring
  labels:
    app: test-pod-with-sidecar
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo hello; sleep 10;done"]
---
apiVersion: v1
kind: Pod
metadata:
  name: no-sidecar
  namespace: monitoring 
  labels:
    app: test-pod-without-sidecar
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo hello; sleep 10;done"]
