kubernetes/allow-ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-frontend
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
  - from: []
